# wyrmhole

./: .gitignore  Dockerfile  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: build.yml
server/: Cargo.toml
server/src/: files.rs  files_json.rs  main.rs  settings.rs  state.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: ActiveDownloadCard.tsx  ActiveSendCard.tsx  App.css  App.tsx  ConnectingCard.tsx  FileIcon.tsx  LoadingDots.tsx  PendingFileOfferCard.tsx  RecieveFileCardComponent.tsx  SentFileCard.tsx  SettingsMenu.tsx  api.ts
