[package]
name = "wyrmhole-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wyrmhole-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
magic-wormhole = "0.7.6"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["compat"] }
chrono = { version = "0.4", features = ["serde"] }
tar = "0.4"
flate2 = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
